- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    6.0
- 
    Ubuntu 18.04.3
 gcc (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0
- 
        d1a43e4a37cb6bbe0dfcbacd4ce975b0ce0090f0
First spotted on this change in qtquickcontrols2, but is reproducible with less code:
import QtQuick 2.12 import QtQuick.Window 2.2 Window { width: 400 height: 400 Text { color: "white" } }
09:53:28: Starting /home/mitch/dev/temp/quick-dev2_qt_dev_static_debug-Debug/quick ... QML debugging is enabled. Only use this in a safe environment. Warning: QQml_colorProvider: no color provider has been set! QQmlApplicationEngine failed to load component qrc:/main.qml:9:16: Invalid property assignment: color expected 09:54:05: The program has unexpectedly finished. 09:54:05: The process was ended forcefully. 09:54:05: /home/mitch/dev/temp/quick-dev2_qt_dev_static_debug-Debug/quick crashed.
The problem seems to be limited to static builds.
The configure options I used to build Qt are:
-static -debug -no-optimize-debug -developer-build -opensource -confirm-license -nomake tests -nomake examples -silent -sanitize address -no-feature-assistant -no-feature-designer -no-feature-distancefieldgenerator -no-feature-kmap2qmap -no-feature-makeqpf -no-feature-pixeltool -no-feature-qdbus -no-feature-qev -no-feature-qtpaths -no-feature-qtplugininfo -no-feature-windeployqt
- relates to
- 
                    QTBUG-85961 Port Qt5QmlImportScanner to Qt6 -         
- Closed
 
-