Quick: Make sure the module initialization runs in static builds

We need to keep a reference to the module initialization function
somewhere in order to prevent the linker from removing it. In order to
avoid further littering of the namespace, the QQuick_initializeProviders
function is transformed to cover all of the initialization.

Task-number: QTBUG-85693
Change-Id: Ie93e5abd1dfb5a425b87c70d8ec6327bb68880cb
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>