src/quick/qtquickglobal_p.h
@@ -65,7 +65,7 @@ void Q_QUICK_PRIVATE_EXPORT qml_register_types_QtQuick();
 
 QT_BEGIN_NAMESPACE
 
-void QQuick_initializeProviders();
+void Q_QUICK_PRIVATE_EXPORT QQuick_initializeModule();
 
 Q_DECLARE_LOGGING_CATEGORY(DBG_TOUCH)
 Q_DECLARE_LOGGING_CATEGORY(DBG_MOUSE)
